--- a/styles/style.css
+++ b/styles/style.css
@@ -302,6 +302,10 @@ header{
 }
 
 /* donate now style start here  */
+.donate{
+    margin-top: 130px;
+}
+
 .donate-title{
     text-align: center;
 }
@@ -311,9 +315,16 @@ header{
     color: rgba(14, 14, 14, 0.7);
     font-weight: 400;
     line-height: 24px;
+    margin-top: 20px;
 }
 
 /* amount card start here  */
+.donate-amount{
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    margin-top: 55px;
+}
 
 
 .amount-card1{
@@ -321,6 +332,7 @@ header{
     padding: 40px;
     border: 1px solid rgba(14, 14, 14, 0.15);
     border-radius: 16px;
+    width: 240px;
 }
 
 .amount-card1 h3{
@@ -328,3 +340,116 @@ header{
     font-weight: bold;
     color: rgba(14, 14, 14, 0.8);
 }
+
+.amount-card2{
+    background: #c6e4d6;
+    padding: 40px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    width: 240px;
+}
+
+.amount-card2 h3{
+    font-size: 40px;
+    font-weight: bold;
+    color: rgba(14, 14, 14, 0.8);
+}
+
+
+.amount-card3{
+    background: #FFFFFF;
+    padding: 40px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    width: 240px;
+}
+
+.amount-card3 h3{
+    font-size: 40px;
+    font-weight: bold;
+    color: rgba(14, 14, 14, 0.8);
+}
+
+
+.amount-card4{
+    background: #FFFFFF;
+    padding: 40px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    width: 240px;
+}
+
+.amount-card4 h3{
+    font-size: 40px;
+    font-weight: bold;
+    color: rgba(14, 14, 14, 0.8);
+}
+
+.amount-card:hover{
+    background-color: #e03275;
+    transition: .5s;
+    color: white !important;
+}
+
+/* donate button style  */
+.input-amnt{
+    padding: 20px 40px;
+    width: 100%;
+    background-color: white;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    margin-top: 32px;
+}
+input::placeholder{
+    font-size: 20px;
+    color: rgba(14, 14, 14, 0.3);
+    font-weight: 700;
+    text-align: center;
+}
+
+input:focus{
+    outline: none;
+}
+.donate-button{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 32px;
+}
+.donate-btn{
+    padding: 17px 34px;
+    background: #006A50;
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 8px;
+    border: 1px solid rgba(14, 14, 14, 0.1);
+    margin: 32px;
+}
+
+
+/* footer style start here  */
+
+.site-footer{
+    background-color: #C6E4D6;
+    padding: 80px 100px;
+    border-radius: 24px;
+    margin-bottom: 90px;
+}
+
+.newsletter-title{
+    font-size: 40px;
+    color: #0E0E0E;
+    font-weight: bold;
+    margin-bottom: 16px;
+}
+
+.newsletter-sub-title{
+    line-height: 24px;
+    font-size: 16px;
+    text-align: center;
+    color: rgba(14, 14, 14, 0.7);
+    font-weight: 400;
+    margin-bottom: 24px;
+}
+
+/* button style star  */
