--- a/styles/style.css
+++ b/styles/style.css
@@ -556,3 +556,56 @@ input:focus{
     border: 1px solid rgba(14, 14, 14, 0.1);
     margin: 150px 0px 20px 0px;
 }
+
+
+/* Footer and all primary section css ends here  */
+
+/* Optional section css start here  */
+.pilar-of-bd{
+    margin: 80px auto;
+}
+
+.pilar-of-bd-title{
+    color: #0E0E0E;
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 24px;
+    margin-bottom: 32px;
+}
+
+.pilar-of-bd-content{
+    display: flex;
+    align-items: center;
+    margin-top: 32px;
+    
+}
+
+.pilar-of-bd-card{
+    width: 300px;
+    padding: 24px;
+    margin-top: 32px;
+}
+
+.pilar-of-bd img{
+    width: 64px;
+}
+
+.pilar-of-bd-card h4{
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 24px;
+    color: rgba(14, 14, 14, 0.8);
+    margin-top: 24px;
+}
+
+.pilar-of-bd-content p{
+    font-size: 16px;
+    color: rgba(14, 14, 14, 0.7);
+    font-weight: 400;
+    margin-top: 13px;
+    line-height: 24px;
+    width: 300px;
+}
+
+
+/* your opinion section start here  */
