--- a/styles/style.css
+++ b/styles/style.css
@@ -609,3 +609,84 @@ input:focus{
 
 
 /* your opinion section start here  */
+
+.opinion{
+    margin-top: 80px !important;
+}
+
+.opinion-title h2{
+    font-size: 40px;
+    font-weight: bold;
+    color: #0E0E0E;
+    margin-bottom: 25px;
+}
+
+
+.question-title{
+    background: #C6E4D6;
+    padding: 24px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 5px;
+}
+
+.question-title h3{
+    font-size: 20px;
+    font-weight: 600;
+    color: #0E0E0E;
+}
+
+.question-content p{
+    color: #0E0E0E;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.question-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 24px;
+}
+
+.opinion-question{
+    margin-top: 52px;
+    margin-bottom: 30px;
+}
+
+/* select css  */
+.selection{
+    background-color: #fff;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+}
+
+
+.question-answer{
+    padding: 10px 14px;
+    background-color: #C6E4D6;
+    border-radius: 4px;
+    border: 1px solid #0E0E0E;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.question-answer2{
+    padding: 10px 14px;
+    background-color: rgba(9, 161, 92, 0.15);
+    border-radius: 4px;
+    border: 1px solid #0E0E0E;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+
+.question-answer3{
+    padding: 10px 14px;
+    background-color: rgba(9, 161, 92, 0.15);
+    border-radius: 4px;
+    border: 1px solid #0E0E0E;
+    font-size: 16px;
+    font-weight: 500;
+}
